; ModuleID = '/home/carl/AnghaBench/openwrt/scripts/extr_mkhash.c_hash_file.c'
source_filename = "/home/carl/AnghaBench/openwrt/scripts/extr_mkhash.c_hash_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hash_type = type { i8* (i32*)* }

@.str = private unnamed_addr constant [2 x i8] c"-\00", align 1
@stdin = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [21 x i8] c"Failed to open '%s'\0A\00", align 1
@.str.3 = private unnamed_addr constant [25 x i8] c"Failed to generate hash\0A\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"%s %s\0A\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hash_type*, i8*, i32)* @hash_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hash_file(%struct.hash_type* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.hash_type*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store %struct.hash_type* %0, %struct.hash_type** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @strcmp(i8* %13, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %22, label %16

16:                                               ; preds = %12, %3
  %17 = load %struct.hash_type*, %struct.hash_type** %5, align 8
  %18 = getelementptr inbounds %struct.hash_type, %struct.hash_type* %17, i32 0, i32 0
  %19 = load i8* (i32*)*, i8* (i32*)** %18, align 8
  %20 = load i32*, i32** @stdin, align 8
  %21 = call i8* %19(i32* %20)
  store i8* %21, i8** %8, align 8
  br label %39

22:                                               ; preds = %12
  %23 = load i8*, i8** %6, align 8
  %24 = call i32* @fopen(i8* %23, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %24, i32** %9, align 8
  %25 = load i32*, i32** %9, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %31, label %27

27:                                               ; preds = %22
  %28 = load i32, i32* @stderr, align 4
  %29 = load i8*, i8** %6, align 8
  %30 = call i32 (i32, i8*, ...) @fprintf(i32 %28, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i8* %29)
  store i32 1, i32* %4, align 4
  br label %62

31:                                               ; preds = %22
  %32 = load %struct.hash_type*, %struct.hash_type** %5, align 8
  %33 = getelementptr inbounds %struct.hash_type, %struct.hash_type* %32, i32 0, i32 0
  %34 = load i8* (i32*)*, i8* (i32*)** %33, align 8
  %35 = load i32*, i32** %9, align 8
  %36 = call i8* %34(i32* %35)
  store i8* %36, i8** %8, align 8
  %37 = load i32*, i32** %9, align 8
  %38 = call i32 @fclose(i32* %37)
  br label %39

39:                                               ; preds = %31, %16
  %40 = load i8*, i8** %8, align 8
  %41 = icmp ne i8* %40, null
  br i1 %41, label %45, label %42

42:                                               ; preds = %39
  %43 = load i32, i32* @stderr, align 4
  %44 = call i32 (i32, i8*, ...) @fprintf(i32 %43, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.3, i64 0, i64 0))
  store i32 1, i32* %4, align 4
  br label %62

45:                                               ; preds = %39
  %46 = load i32, i32* %7, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %58

48:                                               ; preds = %45
  %49 = load i8*, i8** %8, align 8
  %50 = load i8*, i8** %6, align 8
  %51 = icmp ne i8* %50, null
  br i1 %51, label %52, label %54

52:                                               ; preds = %48
  %53 = load i8*, i8** %6, align 8
  br label %55

54:                                               ; preds = %48
  br label %55

55:                                               ; preds = %54, %52
  %56 = phi i8* [ %53, %52 ], [ getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), %54 ]
  %57 = call i32 (i8*, i8*, ...) @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i8* %49, i8* %56)
  br label %61

58:                                               ; preds = %45
  %59 = load i8*, i8** %8, align 8
  %60 = call i32 (i8*, i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0), i8* %59)
  br label %61

61:                                               ; preds = %58, %55
  store i32 0, i32* %4, align 4
  br label %62

62:                                               ; preds = %61, %42, %27
  %63 = load i32, i32* %4, align 4
  ret i32 %63
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @printf(i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
